# chess_model_server

./: README.md  pyproject.toml
research/: Parsing_chess_engines.ipynb
